--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div class="grid h-screen place-items-center">
-  <div class="font-bold text-3xl">
-    Fyle Internship Challenge
-  </div>
+<div class="container mx-auto px-4">
+  <h1 class="text-3xl font-bold mt-8 mb-4">GitHub Repositories</h1>
+  
+  <!-- User Input Component -->
+  <app-user-input></app-user-input>
+
+
 </div>
